[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nomem"
version = "0.1.0"
description = "Not Only Memory — a transparent, token-budgeted memory layer for agentic and RAG applications."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Saswat Tulo", email = "tulosaswat@gmail.com" }]
keywords = ["llm", "memory", "context", "agents", "rag", "langchain", "context-engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
openai = ["tiktoken>=0.5"]
anthropic = ["anthropic>=0.39"]
langchain = ["langchain-core>=0.1"]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/saswat/nomem"
Repository = "https://github.com/saswat/nomem"

[tool.hatch.build.targets.wheel]
packages = ["nomem"]

[tool.pytest.ini_options]
testpaths = ["tests"]
